--- a/web/app/templates/base.html
+++ b/web/app/templates/base.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="static/css/base.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand bg-dark opacity-90">
+    <nav class="navbar">
         <div class="container-fluid">
             <a class="navbar-brand" href="https://covertlawenforcement.com/">
                 <img src="/static/images/valorence.png" alt="Logo" id="logo">
               </a>
-            <div class="navbar justify-content-end" id="nav-end">
-                <a href="https://covertlawenforcement.com/knowledgebase">Help</a>
+            <div class="navbar justify-content-end">
+                <a class="nav-link text-white" href="/help">Help</a>
             </div>
         </div>
     </nav>
@@ -26,8 +26,8 @@
             </div>
         </div>
     </div>
-    <footer class="footer mt-auto py-2">
-        <div class="container text-center">
+    <footer class="footer py-2">
+        <div class="text-center">
             <span> © 2024 Covert Law Enforcement. All Rights Reserved | Support: (435)-565-6018</span>
         </div>
     </footer>
