--- a/web/app/static/css/home.css
+++ b/web/app/static/css/home.css
@@ -1,12 +1,12 @@
 .data-card {
-    background-color:  #7B7B7B;
+    background-color:  #212529;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.3);
     padding: 10px;
     margin: 3%;
     transition: transform 0.3s;
     border-width: small;
-    border-color:  #7B7B7B;
+    border-color:  #212529;
 }
 .data-card:hover {
     transform: translateY(-5px);
@@ -36,7 +36,7 @@
 }
 .btn{
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-    background-color: #7B7B7B;
+    background-color: #212529;
     color: white;
     font-size: 1rem;
     font-weight: bold;
@@ -44,19 +44,19 @@
 }
 .btn:hover{
     transform: translateY(-1.5px);
-    background-color: #7B7B7B;
+    background-color: #212529;
     color: white;
 }
 a:hover, a:focus {
     text-decoration:underline;
 }
-a { 
-    color: white;
-    text-decoration:none;
-    font-size: 2em;
-    margin-right: 5rem;
-    font-weight: bold;
-}
 #RouterWarning {
     cursor: not-allowed;
+}
+.chart-container {
+    width: 100%;
+    height: 175px;
+    background-color: #fff; /* Match the card's background color */
+    font-weight: bolder;
+    font-size: 1rem;
 }
