messy web design

--- a/web/app/templates/base.html
+++ b/web/app/templates/base.html
@@ -14,6 +14,7 @@
                 <img src="/static/images/valorence.png" alt="Logo" id="logo">
               </a>
             <div class="navbar justify-content-end">
+                <a class="nav-link text-white" href="/">Home</a>
                 <a class="nav-link text-white" href="/help">Help</a>
             </div>
         </div>
