--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -7,7 +7,7 @@
         <div class="col-md-3">
             <div class="card">
                 <div class="card-header">
-                    <h1>Cell Signal</h1>
+                    <h1>Signal Quality: Strong</h1>
                 </div>
             </div>
         </div>
@@ -27,10 +27,10 @@
                         <div id="container-volts" class="chart-container"></div>
                     </div>
                     <div class="col-md-4">
-                        <div id="container-watts" class="chart-container"></div>
+                        <div id="container-temp" class="chart-container"></div>
                     </div>
                     <div class="col-md-4">
-                        <div id="container-amps" class="chart-container"></div>
+                        <div id="container-lag" class="chart-container"></div>
                     </div>
                 </div>
             </div>
