--- a/web/app/static/css/base.css
+++ b/web/app/static/css/base.css
@@ -18,6 +18,7 @@ a {
     text-decoration:none;
     font-size: 2em;
     font-weight: bold;
+    margin-right: 1rem;
 }
 body {
     overflow-x: hidden; /* Prevent horizontal overflow */
