--- a/web/app/static/css/home.css
+++ b/web/app/static/css/home.css
@@ -14,18 +14,18 @@
 .data-title {
     font-weight: bold;
     font-size: 1.75rem;
-    color:  white;
+    color:  #212529;
     text-align: center;
 }
 .data-value {
     font-size: 2rem;
     font-weight: bold;
-    color: white;
+    color: #7B7B7B;
     text-align: center;
 }
 .card-header {
     background-color: #0940BA;
-    color: white;
+    color: #212529;
     font-size: 1.5rem;
     font-weight: bold;
 }
