--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -2,24 +2,24 @@
 {% block title %}Relay Control{% endblock %}
 {% block content %}
 <link rel="stylesheet" href="static/css/home.css">
-<div class="contaner mt-5">
+<div class="contaner mt-4">
     <div class="row justify-content-center m-0">
         <div class="col-md-3">
             <div class="card">
                 <div class="card-header">
-                    <h1>Signal Quality: Strong</h1>
+                    <h1 class="mb-0" id="signal">Signal Quality: Strong</h1>
                 </div>
             </div>
         </div>
         <div class="col-md-5">
             <div class="card">
                 <div class="card-header">
-                    <center><h1 id="clock"></h1></center>
+                    <h1 class="mb-0" id="clock"></h1>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row justify-content-center mt-5 m-0">
+    <div class="row justify-content-center mt-4 m-0">
         <div class="col-8">
             <div class="card p-3">
                 <div class="row justify-content-center m-0">
@@ -37,9 +37,8 @@
         </div>
     </div>
 </div>
-<br>
 <!-- Relay Button Groups -->
-<div class="container mt-3">
+<div class="container mt-4">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
