--- a/web/app/static/css/home.css
+++ b/web/app/static/css/home.css
@@ -1,31 +1,6 @@
-.data-card {
-    background-color:  #212529;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-    padding: 10px;
-    margin: 3%;
-    transition: transform 0.3s;
-    border-width: small;
-    border-color:  #212529;
-}
-.data-card:hover {
-    transform: translateY(-5px);
-}
-.data-title {
-    font-weight: bold;
-    font-size: 1.75rem;
-    color:  #212529;
-    text-align: center;
-}
-.data-value {
-    font-size: 2rem;
-    font-weight: bold;
-    color: #7B7B7B;
-    text-align: center;
-}
 .card-header {
     background-color: #0940BA;
-    color: #212529;
+    color: whitesmoke;
     font-size: 1.5rem;
     font-weight: bold;
 }
@@ -37,7 +12,7 @@
 .btn{
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     background-color: #212529;
-    color: white;
+    color: whitesmoke;
     font-size: 1rem;
     font-weight: bold;
     transition: transform 0.3s;
@@ -45,18 +20,31 @@
 .btn:hover{
     transform: translateY(-1.5px);
     background-color: #212529;
-    color: white;
+    color: whitesmoke;
 }
 a:hover, a:focus {
     text-decoration:underline;
+    color: whitesmoke;
 }
 #RouterWarning {
     cursor: not-allowed;
 }
 .chart-container {
     width: 100%;
-    height: 175px;
-    background-color: #fff; /* Match the card's background color */
+    height: 200px;
+    background-color: whitesmoke; /* Match the card's background color */
     font-weight: bolder;
     font-size: 1rem;
+}
+#clock {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    color: whitesmoke;
+    text-align: center;
+}
+#signal {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    color: whitesmoke;
+    text-align: center;
 }
