--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -22,7 +22,7 @@
     <div class="row justify-content-center mt-4 m-0">
         <div class="col-8">
             <div class="card p-3">
-                <div class="row justify-content-center m-0">
+                <figure class="row justify-content-center m-0">
                     <div class="col-md-4">
                         <div id="container-volts" class="chart-container"></div>
                     </div>
@@ -32,7 +32,7 @@
                     <div class="col-md-4">
                         <div id="container-lag" class="chart-container"></div>
                     </div>
-                </div>
+                </figure>
             </div>
         </div>
     </div>
