--- a/web/app/templates/login.html
+++ b/web/app/templates/login.html
@@ -1,22 +1,23 @@
 {% extends "base.html" %}
 {% block title %}Login{% endblock %}
 {% block content %}
+<link rel="stylesheet" href="static/css/login.css">
 <div class="container">
     <div class="row justify-content-center mb-0">
-        <div class="col-6">
+        <div class="col-5">
             <div class="card mt-lg-5">
                 <div class="card-header">
-                    <center><h1 class="mb-0">Login</h1></center>
+                    <center><h1 class="mb-0">Sign In</h1></center>
                 </div>
                 <div class="card-body">
                     <form method="post" action="/login">
                         <div class="mb-3">
-                            <label for="username" class="form-label">Username</label>
-                            <input type="text" class="form-control" id="username" name="username" required>
+                            <!-- <center><label for="username" class="form-label">Username</label></center> -->
+                            <input type="text" class="form-control" id="username" name="username" required placeholder="Username">
                         </div>
                         <div class="mb-3">
-                            <label for="password" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="password" name="password" required>
+                            <!-- <label for="password" class="form-label">Password</label> -->
+                            <input type="password" class="form-control" id="password" name="password" required placeholder="Password">
                         </div>
                         <center><button type="submit" class="btn btn-secondary">Login</button></center>
                     </form>
