--- a/web/app/static/css/index.css
+++ b/web/app/static/css/index.css
@@ -52,17 +52,18 @@ a:hover, a:focus {
     text-align: center;
     font-size: 1.5rem;
 }
-#Head-Content{
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    color: #212529;
-    text-align: center;
-    font-size: 1.25rem;
-}
+
 #Head-Content{
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     color: whitesmoke;
     text-align: center;
     font-size: 1.5rem;
+}
+.dropdown-menu{
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    color: whitesmoke;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: transform 0.3s;
 }
