--- a/web/app/static/css/login.css
+++ b/web/app/static/css/login.css
@@ -1,5 +1,5 @@
 .card-header {
-    background-color: #0940BA;
+    background-color: #212529;
     color: whitesmoke;
     font-size: 1.5rem;
     font-weight: bold;
@@ -11,7 +11,7 @@
 }
 .btn{
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-    background-color: #212529;
+    background-color: #0940BA;
     color: whitesmoke;
     font-size: 1rem;
     font-weight: bold;
@@ -19,19 +19,12 @@
 }
 .btn:hover{
     transform: translateY(-1.5px);
-    background-color: #212529;
+    background-color: #0940BA;
     color: whitesmoke;
 }
 a:hover, a:focus {
     text-decoration:underline;
     color: whitesmoke;
-}
-label{
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    color: #212529;
-    text-align: center;
-    font-size: 1.25rem;
 }
 .container{
     padding: 5px;
@@ -44,3 +37,9 @@ label{
     left: 50%;
     transform: translate(-50%, -50%);
   }
+::placeholder{
+    font-family: 'Roboto', sans-serif;
+    font-weight: medium;
+    color: whitesmoke;
+    font-size: 1.5rem;
+}
