--- a/web/app/static/css/index.css
+++ b/web/app/static/css/index.css
@@ -1,5 +1,5 @@
 .chart-container {
-    width: auto;
+    width: 110%;
     height: 12rem;
     background-color: whitesmoke; /* Match the card's background color */
     font-weight: bolder;
