--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -56,7 +56,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header d-flex justify-content-between align-items-center" id="CameraHead">
-                    Camera <span class="badge" id="CamStatus">Status</span>
+                    Camera <span class="badge" id="CameraStatus">Status</span>
                 </div>
                 <div class="card-body" id="CameraBody">
                     <div class="d-grid gap-2">
