--- a/web/app/static/css/home.css
+++ b/web/app/static/css/home.css
@@ -19,6 +19,13 @@
 }
 .btn:hover{
     transform: translateY(-1.5px);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    background-color: #212529;
+    color: whitesmoke;
+    font-size: 1rem;
+    font-weight: bold;
+}
+.btn:focus{
     background-color: #212529;
     color: whitesmoke;
 }
@@ -30,8 +37,8 @@ a:hover, a:focus {
     cursor: not-allowed;
 }
 .chart-container {
-    width: 100%;
-    height: 200px;
+    width: 110%;
+    height: 12rem;
     background-color: whitesmoke; /* Match the card's background color */
     font-weight: bolder;
     font-size: 1rem;
