--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -4,14 +4,14 @@
 <link rel="stylesheet" href="static/css/home.css">
 <div class="contaner mt-4">
     <div class="row justify-content-center m-0">
-        <div class="col-md-3">
+        <div class="col-4">
             <div class="card">
                 <div class="card-header">
                     <h1 class="mb-0" id="signal">Signal Quality: Strong</h1>
                 </div>
             </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-4">
             <div class="card">
                 <div class="card-header">
                     <h1 class="mb-0" id="clock"></h1>
@@ -112,7 +112,7 @@
     </div>
 </div>
 <script src="/static/js/home.js"></script>
-<script src="/static/js/gauge.js"></script>
+<script src="/static/js/home-gauge.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/highcharts-more.js"></script>
 <script src="https://code.highcharts.com/modules/solid-gauge.js"></script>
