--- a/web/app/static/css/base.css
+++ b/web/app/static/css/base.css
@@ -1,19 +1,27 @@
 
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+.content-wrapper {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+.main-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.content {
+    flex: 1;
+}
 .navbar {
     background-color: #212529;
     top: 0;
-}
-.footer {
-    background-color: #212529;
-    position: fixed;
-    bottom: 0;
-    color: whitesmoke;
-    width: 100%;
-    font-family: 'Roboto', sans-serif;
-
-}
-.footer span {
-    font-size: 1.15rem;
 }
 .nav-link { 
     color: whitesmoke;
@@ -22,4 +30,13 @@
     font-weight: bold;
     margin-right: 0.75rem;
     font-family: 'Roboto', sans-serif;
+}
+
+.footer {
+    background-color: #212529;
+    color: whitesmoke;
+    font-family: 'Roboto', sans-serif;
+}
+.footer span {
+    font-size: 1.15rem;
 }
