--- a/web/app/static/css/home.css
+++ b/web/app/static/css/home.css
@@ -8,6 +8,7 @@
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 3px 6px rgba(0,0,0,0.2);
+    background-color: whitesmoke;
 }
 .btn{
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
