--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -4,14 +4,14 @@
 <link rel="stylesheet" href="static/css/home.css">
 <div class="contaner mt-4">
     <div class="row justify-content-center m-0">
-        <div class="col-4">
+        <div class="col-sm-4">
             <div class="card">
                 <div class="card-header">
-                    <h1 class="mb-0" id="signal">Signal Quality: Strong</h1>
+                    <h1 class="mb-0" id="signal">Testing Signal...</h1>
                 </div>
             </div>
         </div>
-        <div class="col-4">
+        <div class="col-sm-4">
             <div class="card">
                 <div class="card-header">
                     <h1 class="mb-0" id="clock"></h1>
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="row justify-content-center mt-4 m-0">
-        <div class="col-8">
+        <div class="col-sm-8">
             <div class="card p-3">
                 <div class="row justify-content-center m-0">
                     <div class="col-md-4">
