System Info In Web App

--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -11,7 +11,7 @@
                         <h2 class="mb-0">{{ system_name }}</h2> <!-- DYNAMIC NAMING -->
                     </div>
                     <div class="card-body text-center text-dark">
-                        <p class="card-text text-dark opacity-75" id="Head-Content">Model: {{ model }} | Serial Number: {{ serial_number }} | Uptime: {{ uptime }}</p>
+                        <p class="card-text text-dark opacity-75" id="Head-Content">{{ model }} | {{ serial_number }} | Uptime: {{ uptime }}</p>
                     </div>
                 </div>
             </div>
