--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -6,7 +6,7 @@
     <main class="container mt-4">
         <div class="row justify-content-center">
             <div class="col-12 col-md-9">
-                <div class="card">
+                <div class="card" id="Header">
                     <div class="card-header text-center" id="Head">
                         <h2 class="mb-0">{{ system_name }}</h2> <!-- DYNAMIC NAMING -->
                     </div>
