--- a/web/app/templates/login.html
+++ b/web/app/templates/login.html
@@ -12,10 +12,10 @@
                 <div class="card-body">
                     <form method="post" action="/login">
                         <div class="m-3">
-                            <input type="text" class="form-control" id="username" name="username" required placeholder="Username">
+                            <center><input type="text" class="form-control" id="username" name="username" required placeholder="Username"></center>
                         </div>
                         <div class="m-3">
-                            <input type="password" class="form-control" id="password" name="password" required placeholder="Password">
+                            <center><input type="password" class="form-control" id="password" name="password" required placeholder="Password"></center>
                         </div>
                         <center><button type="submit" class="btn m-1">Login</button></center>
                     </form>
