--- a/web/app/static/css/base.css
+++ b/web/app/static/css/base.css
@@ -4,6 +4,7 @@ html, body {
     margin: 0;
     display: flex;
     flex-direction: column;
+    background-color: lightgray;
 }
 .content-wrapper {
     flex: 1;
@@ -22,6 +23,7 @@ html, body {
 .navbar {
     background-color: #212529;
     top: 0;
+    margin: -1px;
 }
 .nav-link { 
     color: whitesmoke;
