--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -61,8 +61,9 @@
 </div>
 <script src="/static/js/gauge.js"></script>
 <script src="/static/js/line.js"></script>
-<script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/highcharts-more.js"></script>
-<script src="https://code.highcharts.com/modules/solid-gauge.js"></script>
-<script src="https://code.highcharts.com/modules/boost.js"></script>
+<script src="https://code.highcharts.com/10.3.3/highcharts.js"></script>
+<script src="https://code.highcharts.com/10.3.3/highcharts-more.js"></script>
+<script src="https://code.highcharts.com/10.3.3/modules/solid-gauge.js"></script>
+<script src="https://code.highcharts.com/10.3.3/modules/boost.js"></script>
+
 {% endblock %}
