--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -113,8 +113,8 @@
 </div>
 <script src="/static/js/home.js"></script>
 <script src="/static/js/home-gauge.js"></script>
-<script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/highcharts-more.js"></script>
-<script src="https://code.highcharts.com/modules/solid-gauge.js"></script>
+<script src="https://code.highcharts.com/10.3.3/highcharts.js"></script>
+<script src="https://code.highcharts.com/10.3.3/highcharts-more.js"></script>
+<script src="https://code.highcharts.com/10.3.3/modules/solid-gauge.js"></script>
 
 {% endblock %}
