--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -16,10 +16,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row justify-content-center mt-4 m-0">
+                    <div class="row justify-content-center mt-4 m-0 ">
                         <div class="col-10">
-                            <div class="card p-3">
-                                <figure class="row justify-content-center m-0">
+                            <div class="card pt-3">
+                                <figure class="row justify-content-between">
                                     {% for gauge in gauges %}
                                     <div class="col-4">
                                         <div id="container-{{gauge.id}}" class="chart-container"></div>
