--- a/web/app/templates/base.html
+++ b/web/app/templates/base.html
@@ -32,7 +32,7 @@
                                 <li><a class="dropdown-item" href="/router">Router</a></li>
                                 <li><a class="dropdown-item" href="/camera">Camera</a></li>
                                 <li><a class="dropdown-item" href="/network">Network</a></li>
-                                <!-- <li><a class="dropdown-item" href="/alerts">Alerts</a></li> -->
+                                <li><a class="dropdown-item" href="/alerts">Alerts</a></li>
                                 <!-- Add more admin links as needed -->
                             </ul>
                         </li>
