--- a/web/app/templates/alerts.html
+++ b/web/app/templates/alerts.html
@@ -11,28 +11,28 @@
                 <form id="advancedSearchForm" class="row g-3">
                     <div class="col-md-3">
                         <label for="startDate" class="form-label">Start Date</label>
-                        <input type="date" class="form-control" id="startDate" name="startDate" required>
+                        <input type="date" class="form-control" id="startDate" name="startDate">
                     </div>
                     <div class="col-md-3">
                         <label for="endDate" class="form-label">End Date</label>
-                        <input type="date" class="form-control" id="endDate" name="endDate" required>
+                        <input type="date" class="form-control" id="endDate" name="endDate">
                     </div>
                     <div class="col-md-2">
                         <label for="alertLevel" class="form-label">Alert Level</label>
                         <select class="form-select" id="alertLevel" name="alertLevel">
                             <option value="">All</option>
-                            <option value="error">Error</option>
-                            <option value="warning">Warning</option>
-                            <option value="info">Info</option>
+                            <option value="Error">Error</option>
+                            <option value="Warning">Warning</option>
+                            <option value="Info">Info</option>
                         </select>
                     </div>
                     <div class="col-md-2">
                         <label for="alertSource" class="form-label">Source</label>
                         <select class="form-select" id="alertSource" name="alertSource">
                             <option value="">All Sources</option>
-                            <option value="system">System</option>
-                            <option value="router">Router</option>
-                            <option value="camera">Camera</option>
+                            <option value="System">System</option>
+                            <option value="Router">Router</option>
+                            <option value="Camera">Camera</option>
                         </select>
                     </div>
                     <div class="col-md-2 d-flex align-items-end">
